--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         box-sizing: border-box;
       }
     </style>
-    <link rel="stylesheet" href="./loader.css">
+    <link rel="stylesheet" href="./loader.less">
   </head>
   <body>
     <div id="loader-wrapper"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
